2006-04-06  Adam Jackson  <ajax@freedesktop.org>

	* Makefile.am:
	* configure.ac:
	* cfb16/.cvsignore:
	* cfb16/Makefile.am:
	* hw/xfree86/dixmods/Makefile.am:
	* hw/xfree86/dixmods/cfb16module.c:
	Remove cfb16, no longer used.

2006-04-05  Fredrik Höglund  <fredrik@kde.org>

	* Xext/Makefile.am:
	Put the screensaver extension back in the Xext module.

	* Xext/saver.c:
	* dix/globals.c:
	* include/globals.h:
	* os/WaitFor.c:
	Move the screenSaverSuspended variable to DIX globals.

	* configure.ac:
	Restore the old link order for the Xorg and Xdmx binaries.

2006-04-05  Ian Romanick <idr@us.ibm.com>

	* fb/fbwindow.c:
	Include fbmmx.h when USE_MMX is defined.  Fixes build problem on
	x86-64 resulting from fbHaveMMX being a macro instead of a function
	on that platform.

2006-04-04  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/xf8_16bpp/Makefile.am:
	* hw/xfree86/xf8_16bpp/cfb8_16.h:
	* hw/xfree86/xf8_16bpp/cfb8_16module.c:
	* hw/xfree86/xf8_16bpp/cfbscrinit.c:
	* hw/xfree86/xf8_16bpp/cfbwindow.c:
	Bug #5729: Convert xf8_16bpp to fb.  chips(4) users please test.

2006-04-04  Adam Jackson  <ajax@freedesktop.org>

	* hw/darwin/darwin.c:
	* hw/xfree86/common/xf86Init.c:
	Bug #5300: Fix missing spaces in the Build OS line in the log. 
	(Egmont Koblinger)

3006-04-04  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/ddc/print_edid.c:
	Bug #4806: Dump the raw EDID contents in hex to the log file for
	better debugging.  (Philip Prindeville)

2006-04-03  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/common/xf86Config.c:
	Bug #2142: Make font path logging more readable. (Eduard Fuchs)

2006-04-03  Adam Jackson  <ajax@freedesktop.org>

	* Xprint/Makefile.am:
	* Xprint/pcl/PclArea.c:
	* Xprint/pcl/PclColor.c:
	* Xprint/pcl/PclGC.c:
	* Xprint/pcl/PclInit.c:
	* Xprint/ps/PsInit.c:
	* Xprint/raster/Raster.c:
	Bug #4766: Convert all Xprint drivers to fb.

2006-04-03  Adam Jackson  <ajax@freedesktop.org>

	* fb/fbfill.c:
	* fb/fbwindow.c: